--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -654,6 +654,12 @@ section {
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
+
+details[open] {
+  background: coral;
+  margin-bottom: 1em;
+}
+
 .testimonials .testimonial-item {
   box-sizing: content-box;
   text-align: center;
