--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -597,6 +597,20 @@ section {
   bottom: 0;
 }
 
+.iframe-container {
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
