--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -598,8 +598,8 @@ section {
 }
 
 .iframe-container {
-  overflow: hidden;
   position: relative;
+  width: 100%;
   padding-bottom: 56.25%;
   height: 0;
 }
